--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "test:cypress" : "cypress open"
   },
   "devDependencies": {
+    "cypress": "^13.7.0",
     "gh-pages": "^6.1.1",
     "sass": "^1.71.1",
     "typescript": "^5.2.2",
